# ax_lib

./: README.md  pyproject.toml
functional/: querries.py
geometry/: geometry.py
oop/: observer.py
src/ax_lib/algorithm/: __init__.py  pqueue.py  tournament.py
src/ax_lib/functional/: __init__.py  math.py
src/ax_lib/geometry/: geometry.py
src/ax_lib/oop/: observer.py
src/ax_lib/std/: __init__.py  base.py  extras.py
std/: utils.py
